--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -16,7 +16,7 @@
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #7986cb;
+  background: #7986CB;
   color: floralwhite;
 }
 .carousel {
